--- a/css/estilos.css
+++ b/css/estilos.css
@@ -182,32 +182,9 @@ section {
 .section__icono3 {
   padding-top: 24px; }
 
-.section2 {
-  width: 100%;
-  height: 750px;
-  box-sizing: border-box;
-  background: #e4e4e4;
-  border: solid 2px #e4e4e4;
-  margin: 0;
-  padding: 0; }
-
-.carousel-control-prev {
-  width: 50px;
-  height: 50px;
-  background-color: #004454;
-  border-radius: 50%;
-  left: 2%;
-  top: 45%;
-  opacity: .9; }
-
-.carousel-control-next {
-  width: 50px;
-  height: 50px;
-  background-color: #004454;
-  border-radius: 50%;
-  right: 2%;
-  top: 45%;
-  opacity: .9; }
+.carousel__foto {
+  height: 200px;
+  width: 100px; }
 
 footer {
   width: 100%;
@@ -546,7 +523,7 @@ h2 {
 
 .main__portfolio {
   margin-top: 20px;
-  height: 1600px; }
+  height: 1900px; }
   .main__portfolio h2 {
     color: #fff;
     font-family: Roboto, Ubuntu, Oxygen, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
