--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -221,34 +221,9 @@ section {
     padding-top: 24px;
 }
 
-.section2 {
-    width: 100%;
-    height: 750px;
-    box-sizing: border-box;
-    background: #e4e4e4;
-    border: solid 2px #e4e4e4;
-    margin: 0;
-    padding: 0;
-}
-
-.carousel-control-prev {
-    width: 50px;
-    height: 50px;
-    background-color: #004454;
-    border-radius: 50%;
-    left: 2%;
-    top: 45%;
-    opacity: .9;
-}
-
-.carousel-control-next {
-    width: 50px;
-    height: 50px;
-    background-color: #004454;
-    border-radius: 50%;
-    right: 2%;
-    top: 45%;
-    opacity: .9;
+.carousel__foto {
+    height: 200px;
+    width: 100px;
 }
 
 footer {
