--- a/css/estilos.css
+++ b/css/estilos.css
@@ -309,14 +309,16 @@ footer {
     padding: 12px;
     border: solid 2px #1d2129;
     border-radius: 5px;
-    color: #1d2129;
-    text-align: center;
-    font-size: 20px;
+    text-align: center; }
+    .section__descargas .cv a {
+      color: #1d2129;
+      font-size: 20px;
+      text-decoration: none; }
+  .section__descargas .cv:hover {
+    background-color: #004454;
     text-decoration: none; }
-
-.cv:hover {
-  background-color: #004454;
-  color: #e4e4e4; }
+    .section__descargas .cv:hover a {
+      color: #fff; }
 
 #herramientas {
   columns: 2; }
