--- a/css/estilos.css
+++ b/css/estilos.css
@@ -113,22 +113,26 @@ main {
   background: rgba(75, 75, 75, 0.3); }
 
 .main__contacto {
-  width: 250px;
+  width: 300px;
   height: 40px;
   margin-top: 20px;
+  margin-left: 40px;
   border: #fff solid 4px;
   text-align: center;
-  color: #fff;
-  font-family: Roboto, Ubuntu, Oxygen, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 20px;
-  font-weight: normal;
-  margin-left: 55px;
-  margin-top: 35px;
   transition: 1.3s ease; }
+  .main__contacto a {
+    color: #fff;
+    font-family: Roboto, Ubuntu, Oxygen, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    text-decoration: none;
+    font-size: 20px;
+    font-weight: normal; }
 
 .main__contacto:hover {
   transform: scale(1.2);
   transition: 1.3s ease; }
+  .main__contacto:hover a {
+    color: #fff;
+    text-decoration: none; }
 
 section {
   background: #e4e4e4;
