--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -140,24 +140,33 @@ main {
 }
 
 .main__contacto {
-    width: 250px;
+    width: 300px;
     height: 40px;
     margin-top: 20px;
+    margin-left: 40px;
     border: #fff solid 4px;
     text-align: center;
-    color: #fff;
-    font-family: $fuente;
-    font-size: 20px;
-    font-weight: normal;
-    margin-left: 55px;
-    margin-top: 35px;
     transition: 1.3s ease;
+    
+    a {
+        color: #fff;
+        font-family: $fuente;
+        text-decoration: none;
+        font-size: 20px;
+        font-weight: normal;
+    }
 }
 
 .main__contacto:hover {
-   transform: scale(1.2);
-   transition: 1.3s ease;
-}
+    transform: scale(1.2);
+    transition: 1.3s ease;
+
+    a{
+        color: #fff;
+        text-decoration: none;
+
+    }
+ }
 
 section {
     background: #e4e4e4;
