ajustes en mobile

--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -32,7 +32,7 @@
      
     .main__portfolio{
         margin-top: 20px;
-        height: 4300px;
+        height: 4700px;
 
         h1 {
             color: #fff;
@@ -42,13 +42,14 @@
             text-align: center;
             margin-right: auto;
             margin-left: auto;
+            margin-bottom: 30px;
             padding-top: 60px;
-            }
+        }
 
     }
 
     .gallery {
-        margin-left: 25px;
+        margin-left: 10px;
         margin-top: -25px;
     }
     
