--- a/scss/_servicios.scss
+++ b/scss/_servicios.scss
@@ -66,7 +66,7 @@ h2{
 
 @media only screen and (max-width: 420px) {
     .main__servicios {
-        width: 100vw;
+        width: 110vw;
         height: 1950px;
         background-color: #e4e4e4;
         border: #e4e4e4;
@@ -99,12 +99,13 @@ h2{
     }
 
     .servicios__iconos {
-        width: 400px;
+        width: 100vw;
         height: 300px;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        margin-left: 60px;
     
         h3 {
             text-align: center;
